--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1><a href = "info">Info</a></h1>
     <h1><a href = "download">Download Bavalt</a></h1>
-    <h1><a href = "js">JavaScript Edition Online</a></h1>
+    <h1><a href = "javascript:open('https://nicecat99.github.io/bavalt/js', 'Bavalt JS edition', 'popup');">JavaScript Edition Online</a></h1>
     <h1><a href = "scratch">Scratch Edition Online</a></h1>
   </body>
 </html>  
