--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1><a href = "info">Info</a></h1>
     <h1><a href = "download">Download Bavalt</a></h1>
-    <h1><a href = "javascript:open('https://nicecat99.github.io/bavalt/js', 'Bavalt', 'popup');">Play it online</a></h1>
+    <h1><a href = "javascript:open('https://nicecat99.github.io/bavalt/js/bavalt.html', 'Bavalt', 'popup width=599 height=400 resizable=0');">Play it online</a></h1>
     <h1><a href = "javascript:open('https://scratch.mit.edu/projects/613084134/embed', 'Bavalt Scratch', 'popup');">Play it on scratch</a></h1>
   </body>
 </html>  
