--- a/info/index.html
+++ b/info/index.html
@@ -7,10 +7,10 @@
     <link rel = "icon" href = "https://nicecat99.github.io/favicon.ico">
   </head>
   <body>
-    <h3><a href = "https://nicecat99.github.io/bavalt">Go back</a></h3>
+    <h3><a href = "javascript:history.go(-1);">Go back</a></h3>
     <h1>Release Date: 10/09/2021</h1>
     <h1>Version: 1.0</h1>
-    <h1>Last Updated 12/18/2021</h1>
+    <h1>Last Updated 12/23/2021</h1>
     <h1>Fully Released on: 12/23/2021</h1>
   </body>
 </html>
