--- a/js/index.html
+++ b/js/index.html
@@ -8,11 +8,11 @@
   </head>
   <body>
     <noscript><h1>Sorry, Your Browser does not support JavaScript</h1></noscript>
-    <h1><a href="javascript:window.open('https://nicecat99.github.io/bavalt/js/bavalt.html', 'Bavalt', 'popup width=599 height=400 resizable=no');">Click here to open again</a></h1>
+    <h1><a href="javascript:window.open('https://nicecat99.github.io/bavalt/js/bavalt.html', 'Bavalt', 'popup width=599 height=400 resizable=no location=no');">Click here to open again</a></h1>
     <h1>If nothing happened, then try enabling pop-up</h1>
     <!--Open Bavalt--!>
     <script>
-window.open('https://nicecat99.github.io/bavalt/js/bavalt.html', 'Bavalt', 'popup width=599 height=400 resizable=no');
+window.open('https://nicecat99.github.io/bavalt/js/bavalt.html', 'Bavalt', 'popup width=599 height=400 resizable=no location=no');
     </script>
   </body>
 </html>
