--- a/js/index.html
+++ b/js/index.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset = "utf-8">
     <title>Bavalt</title>
+    <style>
+      body {
+         color: white;
+         font-family: sans-serif;
+         background: rgb(1, 1, 1);
+      }
+    </style>
     <link rel = "icon" href = "https://nicecat99.github.io/favicon.ico"></link>
-    <link rel = "stylesheet" href = "bavalt.css">
   </head>
   <body>
     <noscript><h1>Sorry, Your Browser does not support JavaScript</h1></noscript>
