--- a/js/index.html
+++ b/js/index.html
@@ -4,7 +4,17 @@
     <meta charset = "utf-8">
     <title>Bavalt</title>
     <style>
+      .size {
+        width: 599px;
+        height: 400px;
+        position: fixed;
+        left: 0px;
+        top: 0px;
+      }
+      
       body {
+         margin: 0;
+         padding: 0;
          color: white;
          font-family: sans-serif;
          background: rgb(1, 1, 1);
