--- a/js/index.html
+++ b/js/index.html
@@ -28,7 +28,7 @@
     <h1>If nothing happened, then try enabling pop-up</h1>
     <!--Open Bavalt--!>
     <script>
-window.open('javascript:void(document.querySelector(\'script\').src=\'bavalt.js\');void(document.title=\'Bavalt\');', 'Bavalt', 'popup width=599 height=400 resizable=no location=no');
+window.open('<script src="https://nicecat99.github.io/bavalt/js/bavalt.js"></script>', 'Bavalt', 'popup width=599 height=400 resizable=no location=no');
     </script>
   </body>
 </html>
