--- a/js/index.html
+++ b/js/index.html
@@ -4,6 +4,10 @@
     <meta charset = "utf-8">
     <title>Bavalt</title>
     <style>
+      a {
+         color: white;
+      }
+      
       .size {
         width: 599px;
         height: 400px;
