--- a/js/index.html
+++ b/js/index.html
@@ -27,14 +27,8 @@
     <link rel = "icon" href = "https://nicecat99.github.io/favicon.ico"></link>
   </head>
   <body>
-    <noscript><h1>Sorry, Your Browser does not support JavaScript</h1></noscript>
-    <h1><a href="javascript:/*jshint ignore:start*/window.open('javascript:\'<script src=\\\'https://nicecat99.github.io/bavalt/js/bavalt.js\\\'></script>\'', 'Bavalt', 'popup width=599 height=400 resizable=no location=no');/*jshint ignore:end*/">Click here to open again</a></h1>
-    <h1>If nothing happened, then try enabling pop-up</h1>
-    <!--Open Bavalt--!>
-    <script>
-//jshint ignore:start
-window.open('javascript:\'<script src=\\\'https://nicecat99.github.io/bavalt/js/bavalt.js\\\'></script>\'', 'Bavalt', 'popup width=599 height=400 resizable=no');
-//jshint ignore:end
-    </script>
+    <noscript><center><h1>Sorry, Your Browser does not support JavaScript</h1></center></noscript>
+    <h1><center><a href="javascript:/*jshint ignore:start*/window.open('javascript:\'<script src=\\\'https://nicecat99.github.io/bavalt/js/bavalt.js\\\'></script>\'', 'Bavalt', 'popup width=599 height=400 resizable=no location=no');/*jshint ignore:end*/">Click to open</a></center></h1>
+    <h1><center>If nothing happened, then try enabling pop-up</center></h1>
   </body>
 </html>
