--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <noscript><center><h1>Sorry, Your Browser does not support JavaScript</h1></center></noscript>
-    <h1><center><a href="javascript:/*jshint ignore:start*/window.open('javascript:\'<script src=\\\'https://nicecat99.github.io/bavalt/js/bavalt.js\\\'></script>\'', 'Bavalt', 'popup width=599 height=400 resizable=no location=no');/*jshint ignore:end*/">Click to open</a></center></h1>
+    <h1><center><a href="javascript:/*jshint ignore:start*/window.open('javascript:\'<script src=\\\'https://nicecat99.github.io/bavalt/bavalt.js\\\'></script>\'', 'Bavalt', 'popup width=599 height=400 resizable=no location=no');/*jshint ignore:end*/">Click to open</a></center></h1>
     <h1><center>If nothing happened, then try enabling pop-up</center></h1>
   </body>
 </html>
