--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
     <h1><center><a href="javascript:open('frame.html', 'Bavalt', 'popup width=599 height=400 resizable=no location=no');">Click to open</a></center></h1>
     <h1><center>If nothing happened, then try enabling pop-up</center></h1>
     <h1><center>Or play the frame version:</center></h1>
-    <iframe src="frame.html" width="599" height="400"></iframe>
+    <center><iframe src="frame.html" width="599" height="400"></iframe></center>
   </body>
 </html>
