--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
   </head>
   <body>
     <noscript><center><h1>Sorry, Your Browser does not support JavaScript</h1></center></noscript>
-    <h1><center><a href="javascript:open('frame.html', 'Bavalt', 'popup width=599 height=400 resizable=no location=no');">Click to open</a></center></h1>
-    <h1><center>If nothing happened, then try enabling pop-up</center></h1>
-    <h1><center>Or play the frame version:</center></h1>
-    <center><iframe src="frame.html" width="599" height="400"></iframe></center>
+    <h1><center><a href="window">Play it in window (pop-up permission required)</a></center></h1>
+    <h1><a href="frame"><center>Or play the frame version:</center></a></h1>
   </body>
 </html>
