--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <noscript><center><h1>Sorry, Your Browser does not support JavaScript</h1></center></noscript>
-    <h1><center><a href="window">Play it in window (pop-up permission required)</a></center></h1>
+    <h1><center><a href="launch">Play it in window (pop-up permission required)</a></center></h1>
     <h1><a href="frame"><center>Or play the frame version:</center></a></h1>
   </body>
 </html>
