--- a/frame.html
+++ b/frame.html
@@ -28,6 +28,6 @@
   </head>
   <body>
     <noscript><center><h1>Sorry, Your Browser does not support JavaScript</h1></center></noscript>
-    <center><iframe src="frame.html" width="599" height="400"></iframe></center>
+    <center><iframe src="window.html" width="599" height="400"></iframe></center>
   </body>
 </html>
