--- a/frame.html
+++ b/frame.html
@@ -30,7 +30,7 @@
     <noscript><center><h1>Sorry, Your Browser does not support JavaScript</h1></center></noscript>
     <center><iframe id="pos" src="window.html" width="599" height="400"></iframe></center>
   <script>
-    var p = document.getElementById('px').style;
+    var p = document.getElementById('pos').style;
     p.position = 'fixed';
     function pos(){
       p.top = ((innerWidth/2) - 200) + 'px';
