--- a/launch.html
+++ b/launch.html
@@ -28,8 +28,8 @@
   </head>
   <body>
     <noscript><center><h1>Sorry, Your Browser does not support JavaScript</h1></center></noscript>
-    <h1><center><a href="javascript:launch();"></a></center></h1>
-    <center>You may need to enable "pop up" for this to work</center>
+    <h1><center><a href="javascript:launch();">Click to open</a></center></h1>
+    <center>WARNING: You may need to enable "pop up" for this to work</center>
     <script>
       function launch(){
         window.open("window.html", "Bavalt", "width=599 height=400 resizable=no popup");
