--- a/frame.html
+++ b/frame.html
@@ -26,7 +26,7 @@
     var p = document.getElementById('pos').style;
     p.position = 'relative';
     function pos(){
-      p.top = ((innerWidth/2) - 300) + 'px';
+      p.top = ((innerHeight/2) - 200) + 'px';
     }
     
     window.setInterval(pos);
