--- a/frame.html
+++ b/frame.html
@@ -17,19 +17,11 @@
          background: rgb(20, 20, 20);
       }
     </style>
-    <link rel = "icon" href = "https://nicecat99.github.io/favicon.ico"></link>
+    <link rel="stylesheet" href="https://nicecat99.github.io/r/c.css">
+    <link rel="icon" href = "https://nicecat99.github.io/favicon.ico"></link>
   </head>
   <body>
-    <noscript><center><h1>Sorry, Your Browser does not support JavaScript</h1></center></noscript>
-    <center><iframe id="pos" src="window.html" width="599" height="400"></iframe></center>
-  <script>
-    var p = document.getElementById('pos').style;
-    p.position = 'relative';
-    function pos(){
-      p.top = ((innerHeight/2) - 200) + 'px';
-    }
-    
-    window.setInterval(pos);
-  </script>
+    <noscript><h1 class="ch">Sorry, Your Browser does not support JavaScript</h1></noscript>
+ <iframe style="width:599px;height:400px;position:absolute;top:0;bottom:0;left:0;right:0;margin:auto;" src="https://nicecat99.github.io/bavalt/window"></iframe>
   </body>
 </html>
