--- a/frame.html
+++ b/frame.html
@@ -21,7 +21,7 @@
     <link rel="icon" href = "https://nicecat99.github.io/favicon.ico"></link>
   </head>
   <body>
-    <noscript><h1 class="ch">Sorry, Your Browser does not support JavaScript</h1></noscript>
+    <noscript><h1 class="ct">Sorry, Your Browser does not support JavaScript</h1></noscript>
  <iframe style="width:599px;height:400px;position:absolute;top:0;bottom:0;left:0;right:0;margin:auto;" src="https://nicecat99.github.io/bavalt/window"></iframe>
   </body>
 </html>
