--- a/download/index.html
+++ b/download/index.html
@@ -1,4 +1,20 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
+  <head>
+    <style>
+      *{
+          margin: 0;
+         padding: 0;
+         color: white;
+         font-family: sans-serif;
+         background: rgb(0, 0, 0);
+      }
+    </style>
+    <meta charset="utf-8">
+    <title>Download | Bavalt</title>
+  </head>
+  <body>
+    <a href="Bavalt.zip"><h1>Download Bavalt</h1></a>
+    *Please note that downloading Bavalt files have different save files, so downloading again would start with $0 and Level 1.
+  </body>
 </html>
