--- a/404.html
+++ b/404.html
@@ -17,11 +17,16 @@
         position:fixed;
         left:-100px;
         top: 140px;
+        border-radius: 100px;
+        border: 3pt solid white;
       }
     </style>
+    <meta charset="utf-8">
+    <title>Whoopsie! | Bavalt</title>
   </head>
   <body>
     <h1>Whoopsie!</h1>
+    <h2>Looks like the page you are looking for is either removed or doesn't exist</h2>
     <div id="ball"></div>
     <script>
       let ballX = -100;
