--- a/404.html
+++ b/404.html
@@ -34,7 +34,7 @@
       setInterval(function(){
         ballX += speed;
         ball.style.left = ballX + 'px';
-        if(ballX > width){
+        if(ballX > innerWidth){
           speed = -5;
         }
 
