--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
     <link rel = "icon" href = "https://nicecat99.github.io/favicon.ico"></link>
   </head>
   <body>
+    <h3 onclick="javascript:history.go(-1);" style="cursor:pointer;">Back</h3>
     <noscript><center><h1>Sorry, Your Browser does not support JavaScript</h1></center></noscript>
     <center><img id="fix" src="https://nicecat99.github.io/favicon.ico"></center>
     <h1><center><a href="launch">Play it in window (pop-up permission required)</a></center></h1>
+    <h1><center><a href="download">Download Bavalt</a></center></h1>
     <h1><a href="frame"><center>Or play it here</center></a></h1>
     <script>
       var s = document.getElementById('fix').style;
