--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel = "icon" href = "https://nicecat99.github.io/favicon.ico"></link>
   </head>
   <body>
-    <h3 onclick="javascript:history.go(-1);" style="cursor:pointer;">Back</h3>
+    <a href="../">Nicecat99</a>
     <noscript><center><h1>Sorry, Your Browser does not support JavaScript</h1></center></noscript>
     <center><img id="fix" src="https://nicecat99.github.io/favicon.ico"></center>
     <h1><center><a href="launch">Play it in window (pop-up permission required)</a></center></h1>
