--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
          background: rgb(0, 0, 0);
       }
     </style>
-    <link rel = "icon" href = "https://nicecat99.github.io/favicon.ico"></link>
+    <link rel = "icon" href = "https://nicecat99.github.io/bavalt.ico"></link>
   </head>
   <body>
     <a href="../">Nicecat99</a>
