--- a/frame.html
+++ b/frame.html
@@ -18,7 +18,7 @@
       }
     </style>
     <link rel="stylesheet" href="https://nicecat99.github.io/r/c.css">
-    <link rel="icon" href = "https://nicecat99.github.io/favicon.ico"></link>
+    <link rel="icon" href = "https://nicecat99.github.io/bavalt.ico"></link>
   </head>
   <body>
     <h3 onclick="javascript:history.go(-1);" style="cursor:pointer;">Back</h3>
