--- a/launch.html
+++ b/launch.html
@@ -24,7 +24,7 @@
          background: rgb(0, 0, 0);
       }
     </style>
-    <link rel = "icon" href = "https://nicecat99.github.io/favicon.ico"></link>
+    <link rel = "icon" href = "https://nicecat99.github.io/bavalt.ico"></link>
   </head>
   <body>
     <noscript><center><h1>Sorry, Your Browser does not support JavaScript</h1></center></noscript>
