--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <a href="../">Nicecat99</a>
     <noscript><center><h1>Sorry, Your Browser does not support JavaScript</h1></center></noscript>
-    <center><img id="fix" src="https://nicecat99.github.io/favicon.ico"></center>
+    <center><img id="fix" src="https://nicecat99.github.io/bavalt.ico"></center>
     <h1><center><a href="launch">Play it in window (pop-up permission required)</a></center></h1>
     <h1><center><a href="download">Download Bavalt</a></center></h1>
     <h1><a href="frame"><center>Or play it here</center></a></h1>
