--- a/download/bavalt-file.html
+++ b/download/bavalt-file.html
@@ -2,7 +2,7 @@
 <html>
   <link rel="icon" href="https://nicecat99.github.io/bavalt.ico">
   <center><iframe
-    src="data:text/html,<script src="https://nicecat99.github.io/bavalt/bavalt.js>"
+    src="data:text/html,<script src='https://nicecat99.github.io/bavalt/bavalt.js'></script>"
     width="599"
     height="400"
     ></iframe>
