--- a/download/bavalt-file.html
+++ b/download/bavalt-file.html
@@ -6,5 +6,6 @@
     width="599"
     height="400"
     ></iframe>
+    <noscript>Well, makesure you turned on javascript 😶</noscript>
   </center>
 </html>
