--- a/download/index.html
+++ b/download/index.html
@@ -14,7 +14,7 @@
     <title>Download | Bavalt</title>
   </head>
   <body>
-    <a href="Bavalt.zip"><h1>Download Bavalt</h1></a>
+    <a href="bavalt-file.html" download><h1>Download Bavalt</h1></a>
     *Please note that downloading Bavalt files have different save files, so downloading again would start with $0 and Level 1.
   </body>
 </html>
