--- a/launch.html
+++ b/launch.html
@@ -28,8 +28,12 @@
   </head>
   <body>
     <noscript><center><h1>Sorry, Your Browser does not support JavaScript</h1></center></noscript>
-    <h1><center><a href="javascript:launch();">Click to open</a></center></h1>
+
+     <iframe style="width:599px;height:400px;position:absolute;top:0;bottom:0;left:0;right:0;margin:auto;" src="https://nicecat99.github.io/bavalt/window"></iframe>
+      <h1><center><a href="javascript:launch();">Click to open</a></center></h1>
     <center>A window may not pop up, if pop-up is blocked</center>
+    <a href="download/bavalt-file.html" download>Download bavalt</a>
+    <a href="https://nicecat99.github.io/info/bavalt#help">Help</a>
     <script>
       function launch(){
         window.open("window.html", "Bavalt", "width=599 height=400 resizable=no popup");
