--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
     <a href="../">Nicecat99</a>
     <noscript><center><h1>Sorry, Your Browser does not support JavaScript</h1></center></noscript>
     <center><img id="fix" src="https://nicecat99.github.io/bavalt.ico"></center>
-    <h1><center><a href="launch">Play it in window</a></center></h1>
-    <h1><center><a href="download">Download Bavalt</a></center></h1>
-    <h1><a href="frame"><center>Or play it here</center></a></h1>
+    <h1><center><a href="launch">Play</a></center></h1>
     <script>
       var s = document.getElementById('fix').style;
       
