--- a/download/bavalt-file.html
+++ b/download/bavalt-file.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <link rel="icon" href="https://nicecat99.github.io/bavalt.ico">
+  <link rel="stylesheet" href="https://nicecat99.github.io/style.css">
   <center><iframe
     src="data:text/html,<script src='https://nicecat99.github.io/bavalt/bavalt.js'></script>"
     width="599"
