--- a/download/bavalt-file.html
+++ b/download/bavalt-file.html
@@ -1,6 +1,11 @@
 <!DOCTYPE HTML>
 <html>
   <link rel="icon" href="https://nicecat99.github.io/bavalt.ico">
+  <style>
+    *{
+      position:fixed;
+    }
+  </style>
   <center><iframe
     src="data:text/html,<script src='https://nicecat99.github.io/bavalt/bavalt.js'></script>"
     width="599"
