--- a/download/bavalt-file.html
+++ b/download/bavalt-file.html
@@ -11,6 +11,7 @@
     width="599"
     height="400"
     ></iframe>
+    The download thingy doesn't work (Tryna fix it soon)
     <noscript>Well, makesure you turned on javascript 😶</noscript>
   </center>
 </html>
