--- a/window.html
+++ b/window.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><link rel="icon" href="https://nicecat99.github.io/bavalt.ico"><script src="bavalt.js"></script></html>
+<!DOCTYPE html><html><link rel="icon" href="https://nicecat99.github.io/bavalt.ico"><script>opener.test=true</script><script src="bavalt.js"></script></html>
