--- a/launch.html
+++ b/launch.html
@@ -37,11 +37,15 @@
     </center>
     <script>
       let test;
+      function set(e){
+        test = e;
+      }
+      
       function launch(){
-        test = false;
         window.open("window.html", "Bavalt", "width=599 height=400 resizable=no popup");
         //Checks if pop-up is enabled
         setTimeout(1000,function(){
+          set(false);
         if(!test){
           alert('Launching Failed, make sure to enable pop-up');
         }
