--- a/launch.html
+++ b/launch.html
@@ -36,7 +36,7 @@
     <a href="https://nicecat99.github.io/info/bavalt#help">Help</a>
     </center>
     <script>
-      let test;
+      var test = false;
       function set(e){
         test = e;
       }
