--- a/launch.html
+++ b/launch.html
@@ -42,7 +42,7 @@
       }
       
       function launch(){
-        window.open("window.html", "Bavalt", "width=599 height=400 resizable=no popup");
+        window.open("window.html", "Bavalt", "popup width=599 height=400 resizable=no");
         //Checks if pop-up is enabled
         setTimeout(1000,function(){
           set(false);
