--- a/launch.html
+++ b/launch.html
@@ -33,7 +33,10 @@
       <h1><center><a href="javascript:launch();">Launch in Window</a></center></h1>
     <center>
    <a href="download/bavalt-file.html" download>Download bavalt</a>
-    <a href="https://nicecat99.github.io/info/bavalt#help">Help</a>
+      <br>
+    <a href="https://nicecat99.github.io/info/bavalt">Info</a>
+      <br>
+    <a href="https://nicecat99.github.io/info/bavalt#help">Need help?</a>
     </center>
     <script>
       var test = false;
@@ -42,7 +45,7 @@
       }
       
       function launch(){
-        window.open("window.html", "Bavalt", "popup width=599 height=400 resizable=no");
+        window.open("window.html", "Bavalt", "width=599 height=400 resizable=no");
         //Checks if pop-up is enabled
         setTimeout(1000,function(){
           set(false);
