--- a/launch.html
+++ b/launch.html
@@ -34,9 +34,9 @@
     <center>
    <a href="download/bavalt-file.html" download>Download bavalt</a>
       <br>
-    <a href="https://nicecat99.github.io/info/bavalt">Info</a>
+    <a href="https://nicecat99.github.io/info/bavalt" style="position:absolute;top:100px;bottom:0;left:0;right:0;margin:auto;" >Info</a>
       <br>
-    <a href="https://nicecat99.github.io/info/bavalt#help">Need help?</a>
+    <a href="https://nicecat99.github.io/info/bavalt#help" style="position:absolute;top:120;bottom:0;left:0;right:0;margin:auto;">Need help?</a>
     </center>
     <script>
       var test = false;
