--- a/launch.html
+++ b/launch.html
@@ -29,14 +29,14 @@
   <body>
     <noscript><center><h1>Sorry, Your Browser does not support JavaScript</h1></center></noscript>
 
-     <iframe style="width:599px;height:400px;position:absolute;top:0;bottom:0;left:0;right:0;margin:auto;" src="https://nicecat99.github.io/bavalt/window"></iframe>
+     <iframe style="width:599px;height:400px;position:absolute;top:50px;bottom:0;left:0;right:0;margin:auto;" src="https://nicecat99.github.io/bavalt/window"></iframe>
       <h1><center><a href="javascript:launch();">Launch in Window</a></center></h1>
     <center>
    <a href="download/bavalt-file.html" download>Download bavalt</a>
       <br>
-    <a href="https://nicecat99.github.io/info/bavalt" style="position:absolute;top:100px;bottom:0;left:0;right:0;margin:auto;" >Info</a>
+    <a href="https://nicecat99.github.io/info/bavalt">Info</a>
       <br>
-    <a href="https://nicecat99.github.io/info/bavalt#help" style="position:absolute;top:120;bottom:0;left:0;right:0;margin:auto;">Need help?</a>
+    <a href="https://nicecat99.github.io/info/bavalt#help">Need help?</a>
     </center>
     <script>
       var test = false;
