--- a/launch.html
+++ b/launch.html
@@ -32,11 +32,7 @@
      <iframe style="width:599px;height:400px;position:absolute;top:100px;bottom:0;left:0;right:0;margin:auto;" src="https://nicecat99.github.io/bavalt/window"></iframe>
       <h1><center><a href="javascript:launch();">Launch in Window</a></center></h1>
     <center>
-   <a href="download/bavalt-file.html" download>Download bavalt</a>
-      <br>
-    <a href="https://nicecat99.github.io/info/bavalt">Info</a>
-      <br>
-    <a href="https://nicecat99.github.io/info/bavalt#help">Need help?</a>
+   <a href="javascript:open('options.html','','blank'" download>Options</a>
     </center>
     <script>
       var test = false;
