--- a/launch.html
+++ b/launch.html
@@ -32,7 +32,7 @@
      <iframe style="width:599px;height:400px;position:absolute;top:100px;bottom:0;left:0;right:0;margin:auto;" src="https://nicecat99.github.io/bavalt/window"></iframe>
       <h1><center><a href="javascript:launch();">Launch in Window</a></center></h1>
     <center>
-   <a href="javascript:open('options.html','','blank'" download>Options</a>
+   <a href="javascript:open('options.html','','blank');">Options</a>
     </center>
     <script>
       var test = false;
