--- a/options.html
+++ b/options.html
@@ -7,7 +7,7 @@
   <body>
     <script>
       let code = `
-            <a href="https://nicecat99.github.io/bavalt/download/bavalt-file.html" download onclick="close()"><button>Download bavalt</button></a>
+            <a href="https://nicecat99.github.io/bavalt/download/bavalt-file.html" download><button>Download bavalt</button></a>
       <br>
     <button onclick="btn1()">Info</button>
       <br>
