--- a/options.html
+++ b/options.html
@@ -3,6 +3,27 @@
   <head>
     <meta charset="utf-8">
     <title>Options | Bavalt</title>
+        <style>
+      a {
+         color: white;
+      }
+      
+      .size {
+        width: 599px;
+        height: 400px;
+        position: fixed;
+        left: 0px;
+        top: 0px;
+      }
+      
+      body {
+         margin: 0;
+         padding: 0;
+         color: white;
+         font-family: sans-serif;
+         background: rgb(0, 0, 0);
+      }
+    </style>
   </head>
   <body>
     <script>
