--- a/options.html
+++ b/options.html
@@ -57,6 +57,8 @@
           set(false);
         if(!test){
           alert('Launching Failed, make sure to enable pop-up');
+        } else {
+          close();
         }
         });
       }
