--- a/launch.html
+++ b/launch.html
@@ -30,9 +30,8 @@
     <noscript><center><h1>Sorry, Your Browser does not support JavaScript</h1></center></noscript>
 
      <iframe style="width:599px;height:400px;position:absolute;top:100px;bottom:0;left:0;right:0;margin:auto;" src="https://nicecat99.github.io/bavalt/window"></iframe>
-      <h1><center><a href="javascript:launch();">Launch in Window</a></center></h1>
     <center>
-   <a href="javascript:open('options.html','','blank width=100 height=100');">Options</a>
+   <strong><a href="javascript:open('options.html','','blank width=100 height=100');">Options</a></strong>
     </center>
     <script>
       var test = false;
@@ -40,16 +39,6 @@
         test = e;
       }
       
-      function launch(){
-        window.open("window.html", "Bavalt", "width=599 height=400 resizable=no");
-        //Checks if pop-up is enabled
-        setTimeout(1000,function(){
-          set(false);
-        if(!test){
-          alert('Launching Failed, make sure to enable pop-up');
-        }
-        });
-      }
     </script>
   </body>
 </html>
