--- a/options.html
+++ b/options.html
@@ -23,6 +23,12 @@
          font-family: sans-serif;
          background: rgb(0, 0, 0);
       }
+          .btn {
+            background: grey;
+            color: white;
+            font-family: sans-serif;
+            font-size:10px;
+          }
     </style>
   </head>
   <body>
@@ -32,10 +38,13 @@
       <br>
     <button onclick="btn1()">Info</button>
       <br>
-     <button onclick="btn2()">Need Help?</button>
-     <button onclick="javascript:opener.history.go(-1);close();">Go back</button>
-     <button onclick="btn3()">Nicecat99's Website</button>
-    <button onclick="launch();">Launch in Window</button></center>
+     <button onclick="btn2()" class="btn">Need Help?</button>
+     <br>
+     <button onclick="javascript:opener.history.go(-1);close();" class="btn">Go back</button>
+     <br>
+     <button onclick="btn3()" class="btn">Nicecat99's Website</button>
+     <br>
+    <button onclick="launch(); class="btn"">Launch in Window</button></center>
       `;
       
       function E(){
@@ -53,7 +62,7 @@
     }
 
     function btn3(){
-      opener.document.body.innerHTML = '<meta http-equiv="refresh" content="0;URL=https://nicecat99.github.io/">';
+      opener.document.body.innerHTML = '<meta http-equiv="refresh" content="0;URL=https://nicecat99.github.io">';
       close();
     }
 
