--- a/options.html
+++ b/options.html
@@ -34,9 +34,9 @@
   <body>
     <script>
       let code = `
-            <a href="https://nicecat99.github.io/bavalt/download/bavalt-file.html" download><button>Download bavalt</button></a>
+            <a href="https://nicecat99.github.io/bavalt/download/bavalt-file.html" download><button style="class">Download bavalt</button></a>
       <br>
-    <button onclick="btn1()">Info</button>
+    <button onclick="btn1()" class="btn">Info</button>
       <br>
      <button onclick="btn2()" class="btn">Need Help?</button>
      <br>
@@ -44,7 +44,7 @@
      <br>
      <button onclick="btn3()" class="btn">Nicecat99's Website</button>
      <br>
-    <button onclick="launch(); class="btn"">Launch in Window</button></center>
+    <button onclick="launch();" class="btn">Launch in Window</button></center>
       `;
       
       function E(){
