--- a/options.html
+++ b/options.html
@@ -28,6 +28,8 @@
             color: white;
             font-family: sans-serif;
             font-size:20px;
+            border-radius:5px;
+            border:5px solid white;
           }
     </style>
   </head>
