--- a/options.html
+++ b/options.html
@@ -36,7 +36,7 @@
   <body>
     <script>
       let code = `
-            <a href="https://nicecat99.github.io/bavalt/download/bavalt-file.html" download><button style="class">Download bavalt</button></a>
+            <a href="https://nicecat99.github.io/bavalt/download/bavalt-file.html" download><button class="btn">Download bavalt</button></a>
       <br>
     <button onclick="btn1()" class="btn">Info</button>
       <br>
