--- a/options.html
+++ b/options.html
@@ -36,6 +36,7 @@
   <body>
     <script>
       let code = `
+      <h1>Options:</h1><br>
             <a href="https://nicecat99.github.io/bavalt/download/bavalt-file.html" download><button class="btn">Download bavalt</button></a>
       <br><br>
     <button onclick="btn1()" class="btn">Info</button>
