--- a/options.html
+++ b/options.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="icon" href="https://nicecat99.github.io/bavalt.ico">
     <title>Options | Bavalt</title>
         <style>
       a {
