--- a/options.html
+++ b/options.html
@@ -25,6 +25,7 @@
          background: rgb(0, 0, 0);
       }
           .btn {
+            cursor:pointer;
             background: grey;
             color: white;
             font-family: sans-serif;
