--- a/options.html
+++ b/options.html
@@ -38,6 +38,7 @@
   <body>
     <script>
       let code = `
+      <center>
       <h1>Options:</h1><br>
             <a href="https://nicecat99.github.io/bavalt/download/bavalt-file.html" download><button class="btn">Download bavalt</button></a>
       <br><br>
