--- a/404.html
+++ b/404.html
@@ -22,11 +22,11 @@
       }
     </style>
     <meta charset="utf-8">
-    <title>Whoopsie! | Bavalt</title>
+    <title>Not Found | Bavalt</title>
   </head> 
   <body>
     <h1>Whoopsie!</h1>
-    <h2>Looks like the page you are looking for is either removed or doesn't exist</h2>
+    <h2>Not found</h2>
     <h2><a href="https://nicecat99.github.io/bavalt">Main Page</a></h2>
     <div id="ball"></div>
     <script>
