--- a/bavalt-file.html
+++ b/bavalt-file.html
@@ -7,7 +7,7 @@
     }
   </style>
   <center><iframe
-    src="data:text/html,<script src='https://nicecat99.github.io/bavalt/.bavalt.js'></script>"
+    src="data:text/html,<script src='https://nicecat99.github.io/bavalt/bavalt.js'></script>"
     width="599"
     height="400"
     ></iframe>
