--- a/file/.src/window.html
+++ b/file/.src/window.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><link rel="icon" href="https://nicecat99.github.io/bavalt.ico"><script>opener.set(true);</script><script src=".bavalt"></script></html>
+<!DOCTYPE html><html><link rel="icon" href="https://nicecat99.github.io/bavalt.ico"><script>opener.set(true);</script><script src="https://nicecat99.github.io/bavalt/bavalt.js"></script></html>
