--- a/options.html
+++ b/options.html
@@ -41,7 +41,7 @@
       <center>
       <img src="https://nicecat99.github.io/bavalt.ico"></img><br>
       <h1>Settings</h1><br>
-            <a href="https://nicecat99.github.io/bavalt/file" download><button class="btn">Download bavalt</button></a>
+            <a href="https://nicecat99.github.io/bavalt/Bavalt.zip" download><button class="btn">Download bavalt</button></a>
       <br><br>
     <button onclick="btn1()" class="btn">Info</button>
       <br><br>
